# EnergyManagement

./: .gitignore  CMakeLists.txt  README.md  energy_management.ncf
EnergyManagement.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
EnergyManagementNode.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/: configurations.xml
src/: main.c
